--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,6 @@ html, body {
   margin: 0;
   padding: 0;
   background:#84cce4;
-  overflow-x: hidden;
 }
 
 
@@ -42,6 +41,18 @@ ul li{
 
 .myname:hover{
   letter-spacing: 18px;
+}
+
+.css-art{
+  position: absolute;
+}
+.css-art p{
+  font-size:23px;
+  font-family: 'Indie Flower', cursive;
+  position: relative;
+  left: 350px;
+  top:85px;
+  color: black;
 }
 
 .clock{
@@ -169,8 +180,8 @@ ul li{
 
 .girl{
   position: absolute;
-  top: 10px;
-  left: 5px;
+  top: 140px;
+  left:330px ;
 }
 
 .hair{
@@ -180,17 +191,18 @@ ul li{
   position: relative;
   background: #f8da67;
   left: 0px;
-  top: 160px;
+  top: 0px;
   border-radius:90px 90px 35px 35px ;
+
 }
 
 .head{
   height: 135px;
   width: 100px;
   background: #dbaf9e;
-  position: absolute;
-  left:350px;
-  top: 200px;
+  position: relative;
+  left:20px;
+  top: -150px;
   border-radius: 0 0 60% 60%;
 }
 
@@ -417,19 +429,19 @@ ul li{
   height: 20px;
   background:  #dbaf9e;
   z-index: 1;
-  position: absolute;
-  left: 385px;
-  top:330px;
-  border-radius: 0 0 15px 15px
+  position: relative;
+  left: 55px;
+  top:-155px;
+  border-radius: 0 0 15px 15px;
 }
 
 .t-shirt{
   background: #DF3B57;
   width: 135px;
   height: 150px;
-  position: absolute;
-  left: 334px;
-  top: 340px;
+  position: relative;
+  left: 5px;
+  top: -170px;
   z-index: -1;
   border-radius: 40px 40px 0 0;
 }
@@ -440,9 +452,9 @@ ul li{
   background:rgba(109,102,103, 0.4);
   width: 3px;
   height: 100px;
-  position: relative;
+  position: absolute;
   top: 50px;
-  left: -30px;
+  left: 100px;
 }
 
 .t-shirt:after{
@@ -1458,15 +1470,6 @@ transform: rotate(95deg);
   100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
 
-.css-art p{
-  font-size:13px;
-  font-family: 'Indie Flower', cursive;
-  position: relative;
-  left: 1210px;
-  top: 525px;
-  color: black;
-}
-
 .window{
   position: absolute;
   top: 130px;
@@ -1961,14 +1964,22 @@ iframe{
    left: 550px;
   }
 
+  .css-art p{
+    font-size: 20px;
+    top: 35px;
+    left: 620px;
+  }
+
   .floor{
-    width: 405%;
+    height: 35vh;
+    width: 395%;
     left: 0;
   }
 
   .postits{
     left: -380px;
-    top:900px;
+    top:850px;
+
   }
 
   .post-it-1, .post-it-2, .post-it-3, .post-it-4{
@@ -1999,11 +2010,6 @@ iframe{
     padding-top: 200px;
   }
 
-  .css-art p{
-    top: -150px;
-    left: 1450px;
-  }
-
   .table{
     left: 450px;
   }
@@ -2024,19 +2030,8 @@ iframe{
     left: 950px;
   }
 
-  .t-shirt{
-    left: 625px;
-  }
-
-  .head{
-    left: 640px;
-  }
-
-  .neck{
-    left: 675px;
-  }
-
-  .hair{
+ 
+  .girl{
     left: 620px;
   }
 
@@ -2044,9 +2039,13 @@ iframe{
     left: 620px;
   }
 
-  /* .coffee{
-    left: 290px;
-  } */
+  .coffee{
+    left: 530px;
+  }
+
+  .plant-div{
+    left: 450px;
+  }
 
   .garbage-can{
     left: 350px;
@@ -2057,11 +2056,11 @@ iframe{
   }
 
   .window{
-    left: 950px;
+    left: 930px;
   }
 
   .awssld, .bio-card, .contact-card{
-    top: 1000px;
+    top: 950px;
     left: 120px;
     width: 345% !important; 
     height: 195vh !important;
@@ -2131,11 +2130,6 @@ iframe{
 
   .postits p{
     padding-top: 200px;
-  }
-
-  .css-art p{
-    top: -150px;
-    left: 1450px;
   }
 
   .table{
@@ -2263,7 +2257,7 @@ iframe{
    Pixel XL => 411 x 823,
    iPhone 6/7/8 plus => 414 x 736,
    iPhone XR => 414 x 896 */
-@media screen and (min-width: 400px){
+/* @media screen and (min-width: 400px){
 
   .myname{
     left: 550px;
@@ -2306,11 +2300,6 @@ iframe{
     padding-top: 200px;
   }
 
-  .css-art p{
-    top: -140px;
-    left: 1450px;
-  }
-
   .table{
     left: 450px;
   }
@@ -2351,9 +2340,7 @@ iframe{
     left: 620px;
   }
 
-  /* .coffee{
-    left: 290px;
-  } */
+
 
   .garbage-can{
     left: 350px;
@@ -2391,9 +2378,9 @@ iframe{
     height: 60vh;
   }
 
-}
+} */
 
-@media only screen and (min-width: 500px){
+/* @media only screen and (min-width: 500px){
   .floor{
     top: 620px;
     width: 240%;
@@ -2434,11 +2421,6 @@ iframe{
     padding-top: 200px;
   }
 
-  .css-art p{
-    top: -140px;
-    left: 1450px;
-  }
-
   .table{
     left: 450px;
   }
@@ -2479,10 +2461,6 @@ iframe{
     left: 620px;
   }
 
-  /* .coffee{
-    left: 290px;
-  } */
-
   .garbage-can{
     left: 350px;
   }
@@ -2515,9 +2493,9 @@ iframe{
   iframe{
     height: 150vh;
   }
-}
+} */
 
-@media only screen and (min-width: 600px){
+/* @media only screen and (min-width: 600px){
   .floor{
     top: 620px;
     width: 220%;
@@ -2558,11 +2536,6 @@ iframe{
     padding-top: 200px;
   }
 
-  .css-art p{
-    top: -140px;
-    left: 1450px;
-  }
-
   .table{
     left: 450px;
   }
@@ -2603,10 +2576,6 @@ iframe{
     left: 620px;
   }
 
-  /* .coffee{
-    left: 290px;
-  } */
-
   .garbage-can{
     left: 350px;
   }
@@ -2642,9 +2611,9 @@ iframe{
   iframe{
     height: 130vh;
   }
-}
+} */
 
-@media only screen and (min-width: 700px){
+/* @media only screen and (min-width: 700px){
   .floor{
     top: 620px;
     width: 190%;
@@ -2692,11 +2661,6 @@ iframe{
     padding-top: 200px;
   }
 
-  .css-art p{
-    top: -140px;
-    left: 1450px;
-  }
-
   .table{
     left: 450px;
   }
@@ -2737,10 +2701,6 @@ iframe{
     left: 620px;
   }
 
-  /* .coffee{
-    left: 290px;
-  } */
-
   .garbage-can{
     left: 350px;
   }
@@ -2748,9 +2708,9 @@ iframe{
   .shelf{
     left: 300px;
   }
-}
+} */
 
-@media only screen and (min-width: 730px){
+/* @media only screen and (min-width: 730px){
   .awssld, .bio-card, .contact-card{
     top: 830px;
     left: 160px;
@@ -2778,9 +2738,9 @@ iframe{
   iframe{
     height: 120vh;
   }
-}
+} */
 
-@media only screen and (min-width: 740px){
+/* @media only screen and (min-width: 740px){
 
   .myname{
     left: 550px;
@@ -2817,12 +2777,12 @@ iframe{
   iframe{
     height: 140vh;
   }
-}
+} */
 
 /* iPad => 768 x 1024, 
    iPad Mini => 768 x 1024,
    iPad Air 1 & 2 => 768 x 1024 */
-@media only screen and (min-width: 760px){
+/* @media only screen and (min-width: 760px){
   .awssld, .bio-card, .contact-card{
     top: 820px;
     left: 160px;
@@ -2850,9 +2810,9 @@ iframe{
   iframe{
     height: 50vh;
   }
-}
+} */
 
-@media only screen and (min-width: 800px){
+/* @media only screen and (min-width: 800px){
 
   .myname{
     left: 600px;
@@ -2894,10 +2854,10 @@ iframe{
   iframe{
     height: 120vh;
   }
-}
+} */
 
 /* iPad Pro => 1024 x 1366 */
-@media only screen and (min-width: 1000px){
+/* @media only screen and (min-width: 1000px){
 
   .myname{
     left: 300px;
@@ -2944,11 +2904,6 @@ iframe{
   padding-top: 90px;
 }
 
-.css-art p{
-  top: 460px;
-  left: 1000px;
-}
-
 .table{
   left: 140px;
 }
@@ -2988,10 +2943,6 @@ iframe{
 .computer{
   left: 330px;
 }
-
-/* .coffee{
-  left: 0px;
-} */
 
 .garbage-can{
   left: 40px;
@@ -3034,10 +2985,10 @@ iframe{
 }
 
 
-}
+} */
 
 /* Samsung Galaxy Tab 10 => 1280 x 800 */
-@media only screen and (min-width: 1200px){
+/* @media only screen and (min-width: 1200px){
   .myname{
     left: 250px;
   }
@@ -3083,11 +3034,6 @@ iframe{
     padding-top: 90px;
   }
   
-  .css-art p{
-    top: 460px;
-    left: 1000px;
-  }
-  
   .table{
     left: 140px;
   }
@@ -3128,9 +3074,6 @@ iframe{
     left: 330px;
   }
   
-  /* .coffee{
-    left: 0px;
-  } */
   
   .garbage-can{
     left: 40px;
@@ -3180,9 +3123,9 @@ iframe{
   iframe{
     height: 50vh;
   }
-}
+} */
 
-@media only screen and (min-height: 1100px){
+/* @media only screen and (min-height: 1100px){
 
   .floor{
     top: 620px;
@@ -3222,11 +3165,6 @@ iframe{
 
   .postits p{
     padding-top: 200px;
-  }
-
-  .css-art p{
-    top: -140px;
-    left: 1450px;
   }
 
   .table{
@@ -3269,9 +3207,6 @@ iframe{
     left: 720px;
   }
 
-  /* .coffee{
-    left: 390px;
-  } */
 
   .garbage-can{
     left: 450px;
@@ -3308,9 +3243,9 @@ iframe{
   iframe{
     height: 40vh;
   }
-}
+} */
 
-@media only screen and (min-height: 1300px){
+/* @media only screen and (min-height: 1300px){
   .myname{
     left: 750px;
   }
@@ -3355,11 +3290,6 @@ iframe{
     padding-top: 200px;
   }
 
-  .css-art p{
-    top: -140px;
-    left: 1450px;
-  }
-
   .table{
     left: 650px;
   }
@@ -3399,10 +3329,6 @@ iframe{
   .computer{
     left: 820px;
   }
-
-  /* .coffee{
-    left: 490px;
-  } */
 
   .garbage-can{
     left: 550px;
@@ -3448,10 +3374,10 @@ iframe{
     height: 35vh;
   }
   
-}
+} */
 
 /* Apple Macbook Air 13-inch => 1440 x 900 */
-@media only screen and (min-width: 1400px){
+/* @media only screen and (min-width: 1400px){
 
   .awssld, .bio-card, .contact-card{
     top: 100px;
@@ -3479,14 +3405,13 @@ iframe{
   }
 
   
-
   iframe{
     height: 40vh;
   }
-}
+} */
 
 /* Del XPS 13 => 1920 x 1080*/
-@media only screen and (min-width: 1900px){
+/* @media only screen and (min-width: 1900px){
   
   .floor{
     height: 50vh;
@@ -3527,11 +3452,10 @@ iframe{
   iframe{
     height: 35vh;
   }
-}
+} */
 
 /* Apple Macbook Pro 15-inch => 2880 x 1800  */
-
-@media only screen and (min-width: 2200px){
+/* @media only screen and (min-width: 2200px){
 
   .myname{
     font-size: 80px;
@@ -4058,9 +3982,9 @@ iframe{
       width: 100%;
       height:40%;
    }
-}
+} */
 /* Apple Macbook 13-inch => 2560 x 1600 */
-@media only screen and (min-width: 2500px){  
+/* @media only screen and (min-width: 2500px){  
   .table{
     top: 950px;
   }
@@ -4177,10 +4101,10 @@ iframe{
       width: 100%;
       height:35%;
    }
-}
+} */
 
 /* Apple iMac 27-inch => 5120 x 2880 */
-@media only screen and (min-width: 5000px){
+/* @media only screen and (min-width: 5000px){
 
 .myname{
   font-size: 120px;
@@ -4355,4 +4279,4 @@ padding-top: 20px;
     width: 100%;
     height:50%;
 }
-}
+} */
