--- a/src/App.css
+++ b/src/App.css
@@ -2768,38 +2768,32 @@ iframe{
 } */
 
 /* Apple Macbook Air 13-inch => 1440 x 900 */
-/* @media only screen and (min-width: 1400px){
+ @media only screen and (min-width: 1400px){
 
   .awssld, .bio-card, .contact-card{
-    top: 100px;
-    left: 250px;
-    width: 75% !important; 
-    height: 85vh !important;
+    top: 900px;
+    left: 190px;
+    width: 65% !important; 
+    height: 95vh !important;
   }
  
   .bio-img-container img{
-    margin: 100px 100px;
-    width: 70%;
+    margin: 150px 100px;
+    width: 100%;
    }
   
    .project-div{
      padding-top: 3em;
    }
 
-
-  .text-container{
-    padding: 300px 0 20px 60px;
-    line-height: 35px;
-  }
-  .contact-div{
-    padding: 450px  100px;
+  .bio .text-container{
+    padding-top: 40px;
   }
 
-  
   iframe{
-    height: 40vh;
+    height: 50vh;
   }
-} */
+} 
 
 /* Del XPS 13 => 1920 x 1080*/
 /* @media only screen and (min-width: 1900px){
