--- a/src/App.css
+++ b/src/App.css
@@ -2869,24 +2869,18 @@ iframe{
 } 
 
 /* Apple Macbook Pro 15-inch => 2880 x 1800  */
-/* @media only screen and (min-width: 2200px){
+ @media only screen and (min-width: 2200px){
 
   .myname{
     font-size: 80px;
     width: auto;
     left: 400px;
   }
-  
-  .css-art{
-    width: auto;
-  }
-  
+
   .css-art p{
     font-size: 30px;
-    position: absolute;
     top: 140px;
-    left: 650px;
-    width: auto;
+    left: 550px;
   }
   
   .clock{
@@ -2987,7 +2981,7 @@ iframe{
   
   .head{
       width: 108px;
-      top: 968px;
+      top: 768px;
       left: 1075px;
   }
   
@@ -3028,14 +3022,14 @@ iframe{
       width: 50px;
       height: 30px;
       border-radius: 0 0 90px 90px;
-      top: 1095px;
+      top: 760px;
       left: 1105px;
   }
   
   .t-shirt{
     width: 170px;
     height: 200px;
-    top: 1100px;
+    top: 740px;
     left: 1050px;
   }
   
@@ -3130,8 +3124,8 @@ iframe{
   }
   
   .dog{
-    top: 1300px;
-    left: 1000px;
+    top: 1050px;
+    left: 2000px;
   }
   
   .dog-head{
@@ -3257,7 +3251,7 @@ iframe{
   
   .postits{
       top: 100px;
-      left: 550px;
+      left: 600px;
   }
   
   .postits p{
@@ -3271,7 +3265,7 @@ iframe{
   }
   
   .post-it-2, .post-it-4{
-      left: 1000px;
+      left: 850px;
   }
   
   .post-it-3, .post-it-4{
@@ -3280,7 +3274,7 @@ iframe{
   
   .window{
       top: 300px;
-      left: 2000px;
+      left: 1950px;
       width: 800px;
       height: 600px;
       border: 20px solid white;
@@ -3396,7 +3390,47 @@ iframe{
       width: 100%;
       height:40%;
    }
-} */
+
+   .awssld, .bio-card, .contact-card{
+    top: 130px;
+    left: 360px;
+    width: 75% !important; 
+    height: 80vh !important;
+  }
+
+  .bio .text-container{
+    padding-top: 155px;
+    line-height: 70px;
+  }
+
+  .text{
+    font-size: 40px;
+  }
+  
+  .bio-img-container img{
+    margin: 100px 100px;
+    width: 100%;
+   }
+  
+   .project-div{
+     padding-top: 5em;
+   }
+
+   .project-div .text-container{
+     padding-top:30px;
+    line-height: 50px;
+  }
+  
+  
+  .contact-div{
+    padding: 450px  100px;
+  }
+  
+  iframe{
+    height: 40vh;
+  }
+} 
+
 /* Apple Macbook 13-inch => 2560 x 1600 */
 /* @media only screen and (min-width: 2500px){  
   .table{
