--- a/src/App.css
+++ b/src/App.css
@@ -3592,7 +3592,7 @@ iframe{
 } 
 
 /* Apple iMac 27-inch => 5120 x 2880 */
-/* @media only screen and (min-width: 5000px){
+ @media only screen and (min-width: 5000px){
 
 .myname{
   font-size: 120px;
@@ -3601,7 +3601,6 @@ iframe{
 
 .css-art p{
   font-size: 40px;
-  position: absolute;
   top: 180px;
   left: 800px;
   width: auto;
@@ -3638,11 +3637,6 @@ padding-top: 20px;
   top: 20px;
 }
 
-
-.t-shirt{
-  top: 1100px;
-  left: 1050px;
-}
 
 .computer{
     top: 1180px;
@@ -3689,8 +3683,8 @@ padding-top: 20px;
 }
 
 .dog{
-  top: 1500px;
-  left: 1600px;
+  top: 1400px;
+  left: 4000px;
 }
 
 .coffee{
@@ -3704,6 +3698,7 @@ padding-top: 20px;
 }
 
 .postits p{
+   padding-top: 250px;
     font-size: 60px;
 }
 
@@ -3713,7 +3708,7 @@ padding-top: 20px;
 }
 
 .post-it-2, .post-it-4{
-    left: 1400px;
+    left: 1200px;
 }
 
 .post-it-3, .post-it-4{
@@ -3767,4 +3762,4 @@ padding-top: 20px;
     width: 100%;
     height:50%;
 }
-} */
+} 
